--- a/views/sdbce.ejs
+++ b/views/sdbce.ejs
@@ -4,6 +4,13 @@
   <!-- Header-->
   <header class="bg-dark py-5">
     <div class="container px-4 px-lg-5 my-5">
+      <div class="back-to-shop">
+        <button class="btn btn-outline-secondary" type="button">
+          <a class="text-decoration-none text-light" href="/logindex"
+            >&leftarrow;Back</a
+          >
+        </button>
+      </div>
       <div class="text-center text-white">
         <h1 class="display-4 fw-bolder">SDBCE</h1>
         <p class="lead fw-normal text-white-50 mb-0">
